# trustFL

./: .gitignore  README.md  braintorrent.ipynb  fl_yahoo.ipynb  floppy_femnist_display_graphs.ipynb  floppy_mnist_display_graphs.ipynb  lstm_reddit.ipynb  p2p_femnist_display_graphs.ipynb  p2p_mnist_display_graphs.ipynb  parallelFederated.py  pyproject.toml  requirements.txt  torchmp.ipynb  torchmp2.ipynb  torchmptesting.py  trustfl.ipynb  trustfl2.ipynb  trustfl_femnist.ipynb  trustfl_femnist_Floppy.ipynb  trustfl_femnist_P2P.ipynb  trustfl_mnist.ipynb  trustfl_mnist_Floppy.ipynb  trustfl_mnist_P2P.ipynb  trustfltesting.ipynb  vanilla_femnist_display_graphs.ipynb  vanilla_mnist_display_graphs.ipynb
datasets/: .gitignore  gen_pickle_dataset.sh
fedlab/main/fedlab_benchmarks/leaf/: .gitignore  dataloader.py  gen_pickle_dataset.sh
